--- a/moonlightgaming/html/login.html
+++ b/moonlightgaming/html/login.html
@@ -24,9 +24,9 @@
     <main>
         <h2>LOGIN</h2>
         <form action="login">
-            <input type="username" placeholder="username" required maxlength="15" minlength="5"><br>
+            <input id="username" type="username" placeholder="username" required maxlength="15" minlength="5"><br>
             <input type="password" placeholder="password" required maxlength="15" minlength="5"><br>
-            <input type="button" value="LOGIN" class="button" onclick="subscribe()">
+            <input type="button" value="LOGIN" class="button" onclick="alerttheuser()">
         </form>
     </main>
     <footer>
