--- a/moonlightgaming/html/index.html
+++ b/moonlightgaming/html/index.html
@@ -12,7 +12,7 @@
    <header>
         <div class="logopart">
             <img src="../source/logo.jpg" alt="logo" class="logo">
-            <h1 class="slogen">MOONLIGHT GAMING</h1>
+            <h1 class="slogen"><a href="https://www.youtube.com/channel/UC4gIu2GNin5cCbMpuwT9JJQ">MOONLIGHT GAMING</a></h1>
         </div>
         <nav class="nav">
             <ul class="ul">
